<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MQTTActivity">


    <TextView
        android:id="@+id/textMQTTServer"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Server IP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textMQTTPort"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="port"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMQTTServer" />

    <TextView
        android:id="@+id/textMQTTTopic"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Topikki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMQTTPort" />

    <TextView
        android:id="@+id/textMQTTSendPayload"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Viesti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMQTTTopic" />

    <TextView
        android:id="@+id/textMQTTPayload"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="120dp"
        android:text="Tuleva viesti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMyMQTTPublish" />

    <Button
        android:id="@+id/buttonMyMQTTPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Publish or Subscripe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMQTTSendPayload" />

    <EditText
        android:id="@+id/editTextServerIP"
        android:layout_width="316dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="number|text"
        android:text="@string/string_oletus_MQTT_serverIP"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textMQTTServer"
        tools:layout_editor_absoluteY="24dp" />

    <EditText
        android:id="@+id/editTextServerPort"
        android:layout_width="316dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number|text"
        android:text="@string/string_oletus_MQTT_serverPort"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textMQTTPort"
        app:layout_constraintTop_toBottomOf="@+id/editTextServerIP" />

    <EditText
        android:id="@+id/editTextTopikki"
        android:layout_width="316dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/string_oletus_MQTT_topikki"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textMQTTTopic"
        app:layout_constraintTop_toBottomOf="@+id/editTextServerPort" />

    <EditText
        android:id="@+id/editTextPayload"
        android:layout_width="316dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/string_oletus_MQTT_payload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textMQTTSendPayload"
        app:layout_constraintTop_toBottomOf="@+id/editTextTopikki" />

</androidx.constraintlayout.widget.ConstraintLayout>